--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,12 +3,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #81e2ff;
+    background-color: #2193b0;
     padding: 0px 80px;
   }
   
   .header span {
-    color: crimson;
+    color: black;
   }
   
   .header-logo {
@@ -29,7 +29,7 @@
   .header__option {
     font-weight: 500;
     margin-left: 100px;
-    color: rgb(97, 97, 97);
+    color: black;
     cursor: pointer;
   }
   
@@ -40,7 +40,7 @@
     height: 120px;
     width: 100%;
     color: white;
-    background-color: rgb(245, 148, 21);
+    background-color: #e591ae;
     transition: 0.5s ease all;
     z-index: 300;
     display: flex;
